# AI-Voice-to-Image-Tool

./: .env.example  .gitignore  2026-06-15 01-43-22.mkv  README.md  start-dev.bat
.trellis/: .template-hashes.json
.trellis/spec/backend/: api-contracts.md  index.md
.trellis/spec/frontend/: component-guidelines.md  index.md  state-management.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  errors.py  main.py  models.py
backend/app/routers/: asr.py  interpret.py
backend/app/services/: __init__.py  asr_client.py  llm_client.py  svg_sanitizer.py
backend/tests/: test_asr_client.py  test_config.py  test_interpret_route.py  test_llm_client.py  test_svg_sanitizer.py
docs/: design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css  types.ts
frontend/src/components/: AudioMeter.vue  CanvasBoard.vue  TranscriptPanel.vue  VoiceButton.vue
frontend/src/services/: api.ts  recorder.test.ts  recorder.ts
frontend/src/stores/: canvas.test.ts  canvas.ts
frontend/src/utils/: sanitize.test.ts  sanitize.ts
scripts/: start-dev.ps1
